--- a/passenger-counter-app/index.css
+++ b/passenger-counter-app/index.css
@@ -9,4 +9,54 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: rgb(255, 236, 210);
 }
+
+    #count {
+        background-color: gold;
+        border: 2.5px solid black;
+        border-radius: 0.5rem;
+    }
+
+    #saved {
+        background-color: orange;
+        border: 2.5px solid black;
+        border-radius: 0.5rem;
+    }
+
+        #decrease {
+            background-color: red;
+            color: white;
+            font-size: larger;
+        }
+
+        #increase {
+            background-color: green;
+            color: white;
+            font-size: larger;
+        }
+
+    .buttons {
+        background-color: rgb(255, 250, 200);
+        border: 1.5px solid black;
+        border-radius: 1rem;
+        margin-bottom: 1.5rem;
+    }
+
+    button {
+        padding: 1rem;
+        background-color: rgb(213, 234, 253);
+        border: 2.5px solid black;
+        color: red;
+        margin: 0.5rem;
+        font-weight: bolder;
+        border-radius: 1rem;
+    }
+    
+    button:hover {
+        background-color: rgb(192, 223, 252);
+    }
+
+    button:active {
+        background-color: rgb(158, 205, 250);
+    }
